--- a/index.html
+++ b/index.html
@@ -89,18 +89,18 @@
 
             <a class="nav__item " href="/trading.html">Трейдинг</a>
 
-            <a class="nav__item " href="/">Обучение</a>
+            <a class="nav__item " href="/learn_trading.html">Обучение</a>
 
             <a class="nav__item " href="/">Корпоративным клиентам</a>
 
           </nav>
           <div class="nav nav--variant-small">
 
-            <a href="/" class="nav__item">Аналитика</a>
+            <a href="/" class="nav__item ">Аналитика</a>
 
-            <a href="/" class="nav__item">Инвесторам и акционерам</a>
+            <a href="/" class="nav__item ">Инвесторам и акционерам</a>
 
-            <a href="/" class="nav__item">О компании</a>
+            <a href="/about.html" class="nav__item ">О компании</a>
 
           </div>
         </div>
@@ -788,7 +788,6 @@
                     <button class="btn btn--white btn--block" type="submit">Подписаться</button>
                   </form>
                 </div>
-
               </div>
             </div>
           </div>
@@ -816,31 +815,31 @@
             <div class="contacts-block__body">
               <div class="social">
 
-                <a class="social__item" href="#.html">
+                <a class="social__item" href="http://russinvest.livejournal.com/">
                   <span class="svg-icon svg-icon--i-lj "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-lj"></use></svg></span>
                 </a>
 
-                <a class="social__item" href="#.html">
+                <a class="social__item" href="http://vk.com/public28593773">
                   <span class="svg-icon svg-icon--i-vk "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-vk"></use></svg></span>
                 </a>
 
-                <a class="social__item" href="#.html">
+                <a class="social__item" href="https://twitter.com/russ_invest">
                   <span class="svg-icon svg-icon--i-twitter "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-twitter"></use></svg></span>
                 </a>
 
-                <a class="social__item" href="#.html">
+                <a class="social__item" href="http://www.facebook.com/russinvest">
                   <span class="svg-icon svg-icon--i-facebook "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-facebook"></use></svg></span>
                 </a>
 
-                <a class="social__item" href="#.html">
+                <a class="social__item" href="https://plus.google.com/105534312579374866161">
                   <span class="svg-icon svg-icon--i-gplus "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-gplus"></use></svg></span>
                 </a>
 
-                <a class="social__item" href="#.html">
+                <a class="social__item" href="http://www.odnoklassniki.ru/russinvest">
                   <span class="svg-icon svg-icon--i-odnoklassniki "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-odnoklassniki"></use></svg></span>
                 </a>
 
-                <a class="social__item" href="#.html">
+                <a class="social__item" href="http://www.linkedin.com/company/investment-company-ic-russ-invest">
                   <span class="svg-icon svg-icon--i-linkedin2 "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-linkedin2"></use></svg></span>
                 </a>
 
