--- a/learn_trading.html
+++ b/learn_trading.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Руссинвест | Трейдинг</title>
-  <meta content="Мы оказываем физическим и юридическим лицам брокерские услуги на основных торговых площадках России" name="description">
+  <title>Руссинвест | Обучение</title>
+  <meta content="Семинары по инвестированию и обучению трейдингу" name="description">
   <meta content="" name="keywords">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="telephone=no" name="format-detection">
-  <meta property="og:title" content="Трейдинг">
-  <meta property="og:description" content="Мы оказываем физическим и юридическим лицам брокерские услуги на основных торговых площадках России">
+  <meta property="og:title" content="Обучение">
+  <meta property="og:description" content="Семинары по инвестированию и обучению трейдингу">
 
   <link rel="shortcut icon" href="favicon.ico">
 
@@ -87,9 +87,9 @@
 
             <a class="nav__item " href="/invest.html">Инвестиции</a>
 
-            <a class="nav__item  is-active" href="/trading.html">Трейдинг</a>
+            <a class="nav__item " href="/trading.html">Трейдинг</a>
 
-            <a class="nav__item " href="/learn_trading.html">Обучение</a>
+            <a class="nav__item  is-active" href="/learn_trading.html">Обучение</a>
 
             <a class="nav__item " href="/">Корпоративным клиентам</a>
 
@@ -130,205 +130,191 @@
   </div>
 
   <section class="section hero">
-    <div class="hero__slide hero__slide--bg-default hero__slide--theme-dark" style="background-image: url(uploads/trading-bg.jpg)">
+    <div class="hero__slide hero__slide--nomh hero__slide--theme-white">
       <div class="hero__container">
         <div class="breadcrumbs">
           <a href="/" class="breadcrumbs__item">главная</a>
-          <span class="breadcrumbs__item">Трейдинг</span>
+          <span class="breadcrumbs__item">Обучение</span>
         </div>
         <div class="hero__row">
           <div class="hero__column">
             <div class="hero__data">
-              <h2 class="hero__title">Трейдинг</h2>
-              <p class="hero__caption offset-small">Мы оказываем физическим и юридическим лицам брокерские услуги на основных торговых площадках России</p>
-              <a href="#" class="btn btn--default btn--with-arrow">
-
-              Подобрать тариф <span class="btn__arrow"></span>
-
-            </a>
+              <h2 class="hero__title">Обучение</h2>
+              <p class="hero__caption">Семинары по инвестированию и обучению трейдингу</p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-
-  <section class="section">
-    <div class="container">
-      <div class="page-nav offset-medium">
-
-        <a href="/" class="page-nav__item">Российские ценные бумаги</a>
-
-        <a href="/" class="page-nav__item">Валютный рынок</a>
-
-        <a href="/" class="page-nav__item">Срочный рынок</a>
-
-        <a href="/" class="page-nav__item">Корпоративные еврооблигации</a>
-
-        <a href="/" class="page-nav__item">Американские ценные бумаги</a>
-
-      </div>
-    </div>
-  </section>
-  <section class="special">
-    <div class="special__container container">
-      <h2 class="special__title title">QUIK</h2>
-      <div class="special__content">
-        <div class="special__lead">Наша компания предлагает услуги брокерского обслуживания через систему интернет-трейдинга &laquo;QUIK&raquo;.</div>
-        <div class="special__text">
-          <p>(Quickly Updatable Information Kit)&nbsp;&mdash; это многофункциональная информационно-торговая система, пользователи которой получают массу возможностей. На&nbsp;сегодняшний день “QUIK” &mdash; это самая популярная в&nbsp;России система интернет-трейдинга,
-            которую используют наиболее крупные и&nbsp;успешные брокерские компании. “QUIK” обеспечивает доступ к&nbsp;биржевым торгам как в&nbsp;России, так и&nbsp;за&nbsp;рубежом, позволяя одновременно решать несколько задач.</p>
-          <p>
-            <a href="#">
-              <img src="uploads/appstorebtn.png" srcset="uploads/appstorebtn2x.png 2x, uploads/appstorebtn3x.png 3x" alt="" />
-            </a>&emsp;
-            <a href="#">
-              <img src="uploads/gplaybtn.png" srcset="uploads/gplaybtn2x.png 2x, uploads/gplaybtn3x.png 3x" alt="" />
-            </a>
-          </p>
+  <div class="wrapper wrapper--1200">
+    <div class="showcase" style="background-image: url(uploads/learn-bg.jpg)">
+      <div class="showcase__label">Курс 01</div>
+      <div class="showcase__content">
+        <div class="showcase__data">
+          <h2 class="showcase__title">Практика торговли акциями, фьючерсами и&nbsp;опционами</h2>
+          <p class="showcase__text">Вы&nbsp;узнаете, как и&nbsp;где купить акции с&nbsp;максимальной выгодой для себя, научитесь с&nbsp;минимальными рисками проводить арбитражные сделки, страховать инвестиционные портфели, освоите на&nbsp;практике и&nbsp;без риска потери собственных
+            средств.</p>
+          <a href="#" class="btn btn--default btn--with-arrow">Записаться на курс</a>
+        </div>
+        <div class="showcase__meta">
+          <div class="showcase__meta-item">
+            <div class="showcase__meta-title">15 часов</div>
+            <div class="showcase__meta-text">одно занятие&nbsp;&mdash; 3&nbsp;часа</div>
+          </div>
+          <div class="showcase__meta-item">
+            <div class="showcase__meta-title">12&nbsp;000&nbsp;р. &mdash;&nbsp;в&nbsp;группе</div>
+            <div class="showcase__meta-text">от&nbsp;30&nbsp;000&nbsp;р. &mdash;&nbsp;индивидуально</div>
+          </div>
+          <div class="showcase__meta-item">
+            <div class="showcase__meta-title">Осталось 7 мест</div>
+          </div>
         </div>
       </div>
-      <div class="special__image" style="background-image: url(uploads/special-bg.png)"></div>
     </div>
-  </section>
+  </div>
   <section class="section">
     <div class="container">
-      <h2 class="title offset-base">Наши преимущества</h2>
-      <div class="pillar-list offset-base">
-        <div class="pillar">
-          <div class="pillar__icon">
-            <img src="uploads/money.png" srcset="uploads/money2x.png 2x, uploads/money3x.png 3x" alt="" />
-          </div>
-          <div class="pillar__title">
-            Система интернет-трейдинга «QUIK»
-          </div>
-          <div class="pillar__text">
-            iQUIK (Ipad и Iphone)+QUIK для Android;
-          </div>
-        </div>
+      <div class="offset-base">
+        <div class="cource-list">
 
-        <div class="pillar">
-          <div class="pillar__icon">
-            <img src="uploads/briefcase.png" srcset="uploads/briefcase2x.png 2x, uploads/briefcase3x.png 3x" alt="" />
+          <div class="cource">
+            <div class="cource__inner">
+              <div class="cource__label">Курс 02</div>
+              <div class="cource__title">Фьючерсные и&nbsp;опционные стратегии: высокая доходность при контролируемых рисках</div>
+              <div class="cource__text">В&nbsp;программе курса рассматриваются все элементы профессионального срочного рынка</div>
+              <div class="cource__meta">
+                <div class="cource__meta-row">
+                  <div class="cource__meta-col">
+                    <div class="cource__meta-label">15 часов</div>
+                    <div class="cource__meta-text">одно занятие&nbsp;&mdash;3 часа</div>
+                  </div>
+                  <div class="cource__meta-col">
+                    <div class="cource__meta-label">12 000 р.&mdash;&nbsp;в&nbsp;группе</div>
+                    <div class="cource__meta-text">от 30 000 р.&mdash;&nbsp;индивидуально</div>
+                  </div>
+                </div>
+                <div class="cource__meta-row">
+                  <div class="cource__meta-col">
+                    <div class="cource__meta-label">Осталось 7 мест</div>
+                  </div>
+                  <div class="cource__meta-col">
+                    <a href="/" class="btn btn--default btn--with-arrow">Записаться на курс</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="pillar__title">
-            Быстрое открытие счёта
-          </div>
-          <div class="pillar__text">
-            Максимум один день
-          </div>
-        </div>
 
-        <div class="pillar">
-          <div class="pillar__icon">
-            <img src="uploads/studio-calculator.png" srcset="uploads/studio-calculator2x.png 2x, uploads/studio-calculator3x.png 3x" alt="" />
+          <div class="cource">
+            <div class="cource__inner">
+              <div class="cource__label">Курс 02</div>
+              <div class="cource__title">Фьючерсные и&nbsp;опционные стратегии: высокая доходность при контролируемых рисках</div>
+              <div class="cource__text">В&nbsp;программе курса рассматриваются все элементы профессионального срочного рынка</div>
+              <div class="cource__meta">
+                <div class="cource__meta-row">
+                  <div class="cource__meta-col">
+                    <div class="cource__meta-label">15 часов</div>
+                    <div class="cource__meta-text">одно занятие&nbsp;&mdash;3 часа</div>
+                  </div>
+                  <div class="cource__meta-col">
+                    <div class="cource__meta-label">12 000 р.&mdash;&nbsp;в&nbsp;группе</div>
+                    <div class="cource__meta-text">от 30 000 р.&mdash;&nbsp;индивидуально</div>
+                  </div>
+                </div>
+                <div class="cource__meta-row">
+                  <div class="cource__meta-col">
+                    <div class="cource__meta-label">Осталось 7 мест</div>
+                  </div>
+                  <div class="cource__meta-col">
+                    <a href="/" class="btn btn--default btn--with-arrow">Записаться на курс</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="pillar__title">
-            Персональный менеджер
-          </div>
-          <div class="pillar__text">
-            Быстрое решение всех вопросов, Вас не&nbsp;гоняют по&nbsp;разным отделам
-          </div>
-        </div>
 
-        <div class="pillar">
-          <div class="pillar__icon">
-            <img src="uploads/magnifying-glass-on-a-rising-bar-graph.png" srcset="uploads/magnifying-glass-on-a-rising-bar-graph2x.png 2x, uploads/magnifying-glass-on-a-rising-bar-graph3x.png 3x" alt="" />
+          <div class="cource">
+            <div class="cource__inner">
+              <div class="cource__label">Курс 02</div>
+              <div class="cource__title">Фьючерсные и&nbsp;опционные стратегии: высокая доходность при контролируемых рисках</div>
+              <div class="cource__text">В&nbsp;программе курса рассматриваются все элементы профессионального срочного рынка</div>
+              <div class="cource__meta">
+                <div class="cource__meta-row">
+                  <div class="cource__meta-col">
+                    <div class="cource__meta-label">15 часов</div>
+                    <div class="cource__meta-text">одно занятие&nbsp;&mdash;3 часа</div>
+                  </div>
+                  <div class="cource__meta-col">
+                    <div class="cource__meta-label">12 000 р.&mdash;&nbsp;в&nbsp;группе</div>
+                    <div class="cource__meta-text">от 30 000 р.&mdash;&nbsp;индивидуально</div>
+                  </div>
+                </div>
+                <div class="cource__meta-row">
+                  <div class="cource__meta-col">
+                    <div class="cource__meta-label">Осталось 7 мест</div>
+                  </div>
+                  <div class="cource__meta-col">
+                    <a href="/" class="btn btn--default btn--with-arrow">Записаться на курс</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="pillar__title">
-            Обучение клиента стратегиям и&nbsp;тактикам биржевой торговли
-          </div>
-          <div class="pillar__text">
-            Уникальные курсы, обеспечивающие получение узконаправленных практических знаний
-          </div>
-        </div>
 
-        <div class="pillar">
-          <div class="pillar__icon">
-            <img src="uploads/analytics-11.png" srcset="uploads/analytics-112x.png 2x, uploads/analytics-113x.png 3x" alt="" />
+          <div class="cource">
+            <div class="cource__inner">
+              <div class="cource__label">Курс 02</div>
+              <div class="cource__title">Фьючерсные и&nbsp;опционные стратегии: высокая доходность при контролируемых рисках</div>
+              <div class="cource__text">В&nbsp;программе курса рассматриваются все элементы профессионального срочного рынка</div>
+              <div class="cource__meta">
+                <div class="cource__meta-row">
+                  <div class="cource__meta-col">
+                    <div class="cource__meta-label">15 часов</div>
+                    <div class="cource__meta-text">одно занятие&nbsp;&mdash;3 часа</div>
+                  </div>
+                  <div class="cource__meta-col">
+                    <div class="cource__meta-label">12 000 р.&mdash;&nbsp;в&nbsp;группе</div>
+                    <div class="cource__meta-text">от 30 000 р.&mdash;&nbsp;индивидуально</div>
+                  </div>
+                </div>
+                <div class="cource__meta-row">
+                  <div class="cource__meta-col">
+                    <div class="cource__meta-label">Осталось 7 мест</div>
+                  </div>
+                  <div class="cource__meta-col">
+                    <a href="/" class="btn btn--default btn--with-arrow">Записаться на курс</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="pillar__title">
-            Постоянная аналитическая поддержка
-          </div>
+
         </div>
       </div>
 
       <div class="offset-base">
-        <div class="poster-list">
-
-          <div class="poster-list__item poster-list__item--1of3">
-            <div class="poster poster--textpreset-2416 poster--vcenter poster--mh250 poster--bg-blue">
-              <div class="poster__image poster__image--rb" style="background-image: url(uploads/twoheadeagle.png)"></div>
-              <div class="poster__data">
-                <div class="poster__data-inner">
-                  <a href="#" class="poster__title">Российские ценные бумаги</a>
-                  <div class="poster__text">Ценные бумаги выпускаются эмитентами с целью реализации определенных проектов</div>
-                </div>
-              </div>
+        <div class="poster poster--vcenter poster--textpreset-3024 poster--mh330 poster--hcenter">
+          <div class="poster__image" style="background-image: url(/uploads/lerning-poster.jpg);"></div>
+          <div class="poster__data">
+            <div class="poster__data-inner">
+              <div class="poster__text">Лекции и&nbsp;семинары проводит профессиональный управляющий активами с&nbsp;опытом работы на&nbsp;фондовом рынке с&nbsp;1996&nbsp;г.</div>
             </div>
           </div>
-
-          <div class="poster-list__item poster-list__item--1of3">
-            <div class="poster poster--textpreset-2416 poster--text-medium poster--vcenter poster--mh250">
-              <div class="poster__image poster__image--rb" style="background-image: url(uploads/euro-bg.png)"></div>
-              <div class="poster__data">
-                <div class="poster__data-inner">
-                  <a href="#" class="poster__title">Валютный рынок</a>
-                  <div class="poster__text">Осуществлениие операций по покупке или продаже иностранной валюты</div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="poster-list__item poster-list__item--1of3">
-            <div class="poster poster--textpreset-2416 poster--text-medium poster--vcenter poster--mh250 poster--bg-green">
-              <div class="poster__image poster__image--rb" style="background-image: url(uploads/ipo.png)"></div>
-              <div class="poster__data">
-                <div class="poster__data-inner">
-                  <a href="#" class="poster__title">Срочный рынок</a>
-                  <div class="poster__text">Заключение срочных контрактов: форварды, фьючерсы, опционы</div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="poster-list__item poster-list__item--1of2">
-            <div class="poster poster--textpreset-2416 poster--mh250 poster--bg-blue">
-              <div class="poster__image " style="background-image: url(uploads/poster-img-121.jpg)"></div>
-              <div class="poster__data">
-                <div class="poster__data-inner">
-                  <a href="#" class="poster__title">Американские ценные бумаги</a>
-                  <div class="poster__text">Вложения в американские облигации – один из самых надежных финансовых инструментов</div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="poster-list__item poster-list__item--1of2">
-            <div class="poster poster--textpreset-2416 poster--mh250 poster--bg-blue">
-              <div class="poster__image " style="background-image: url(uploads/bitmap-copy-6.jpg)"></div>
-              <div class="poster__data">
-                <div class="poster__data-inner">
-                  <a href="#" class="poster__title">Корпоративные еврооблигации</a>
-                  <div class="poster__text">ИК РУСС-ИНВЕСТ предлагает купить частным и юридическим лицам еврооблигации российских эмитентов</div>
-                </div>
-              </div>
-            </div>
-          </div>
-
         </div>
       </div>
 
-      <div class="wrapper wrapper--800">
-        <div class="panel panel--theme-dotted panel--nomh panel--center">
-          <div class="panel__inner">
-            <div class="panel__inner-wrapp">
-              <div class="panel__text offset-small">
-                Позвоните нам и&nbsp;задайте интересующие вопросы или отправьте контактные данные, и&nbsp;наш менеджер свяжется с&nbsp;Вами для консультации
+      <div class="grid">
+        <div class="grid__col grid__col--68"></div>
+        <div class="grid__col grid__col--28">
+          <div class="panel panel--pad3040 panel--textpreset-3012">
+            <div class="panel__inner">
+              <div class="panel__inner-wrapp">
+                <div class="panel__title">Возникли вопросы?</div>
+                <div class="panel__text offset-small">Высококвалифицированные специалисты компании ПАО &laquo;ИК&nbsp;РУСС-ИНВЕСТ&raquo;, помогут Вам определиться с&nbsp;выбором курса!</div>
+                <a href="tel:74953639380" class="panel__tel offset-small">+7 (495) 363-93-80</a>
+                <button class="btn btn--white btn--block">Заказать звонок</button>
               </div>
-              <div><a href="tel:74953639380" class="panel__tel offset-small">+7 (495) 363-93-80</a>
-              </div>
-              <button class="btn btn--default">Заказать звонок</button>
             </div>
           </div>
         </div>
